# uri-template-ex

./: .gitmodules  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml
.prompts/: fix-error-in-doc.md  generate-readme-ja.md
src/: lib.rs  tests_readme.rs  vars.rs
tests/: captures.rs  test_suite.rs  tests.rs
